[gd_scene load_steps=7 format=3 uid="uid://en1mqsrf58ka"]

[ext_resource type="Texture2D" uid="uid://bwf4bpn28sj77" path="res://graphics/icon.svg" id="1_4flbx"]
[ext_resource type="Script" uid="uid://wkfijdxl0av1" path="res://Actors/Player/player.gd" id="1_onrkg"]
[ext_resource type="Texture2D" uid="uid://bmvvtay7oilmh" path="res://graphics/life_icon.png" id="2_v1key"]
[ext_resource type="PackedScene" uid="uid://byv8rt76sqhox" path="res://UI/SkillHudIcon.tscn" id="4_b63gh"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_onrkg"]
size = Vector2(128, 128)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_onrkg"]
bg_color = Color(0.6751306, 0.77538246, 1.2880678, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1
corner_detail = 12

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_onrkg")
life_icon = ExtResource("2_v1key")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_onrkg")

[node name="RecoveryTimer" type="Timer" parent="."]
one_shot = true

[node name="AnticipationTimer" type="Timer" parent="."]
one_shot = true

[node name="DashCooldownTimer" type="Timer" parent="."]
one_shot = true

[node name="DashDurationTimer" type="Timer" parent="."]
one_shot = true

[node name="SkillCastTimer" type="Timer" parent="."]
one_shot = true

[node name="StateDebugLabel" type="Label" parent="."]
modulate = Color(0, 0, 0, 1)
self_modulate = Color(0, 0, 0, 1)
offset_left = 64.0
offset_top = -64.0
offset_right = 104.0
offset_bottom = -41.0

[node name="Camera2D" type="Camera2D" parent="."]

[node name="StaminaBar" type="ProgressBar" parent="."]
offset_left = -56.0
offset_top = 72.0
offset_right = 56.0
offset_bottom = 88.0
theme_override_styles/fill = SubResource("StyleBoxFlat_onrkg")
value = 100.0
show_percentage = false

[node name="Visuals" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Visuals"]
texture = ExtResource("1_4flbx")

[node name="Skill1Slot" type="Node2D" parent="Visuals"]

[node name="Skill2Slot" type="Node2D" parent="Visuals"]

[node name="Skill3Slot" type="Node2D" parent="Visuals"]

[node name="IFramesTimer" type="Timer" parent="."]
one_shot = true

[node name="HUD" type="CanvasLayer" parent="."]

[node name="LivesContainer" type="HBoxContainer" parent="HUD"]

[node name="ScreenFlashRect" type="ColorRect" parent="HUD"]
modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HudContainer" type="Control" parent="HUD"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SkillHudIcon1" parent="HUD/HudContainer" instance=ExtResource("4_b63gh")]
layout_mode = 0
offset_left = 2008.0
offset_top = 1264.0
offset_right = 2108.0
offset_bottom = 1364.0

[node name="SkillHudIcon2" parent="HUD/HudContainer" instance=ExtResource("4_b63gh")]
layout_mode = 0
offset_left = 2200.0
offset_top = 1264.0
offset_right = 2300.0
offset_bottom = 1364.0

[node name="SkillHudIcon3" parent="HUD/HudContainer" instance=ExtResource("4_b63gh")]
layout_mode = 0
offset_left = 2392.0
offset_top = 1264.0
offset_right = 2492.0
offset_bottom = 1364.0
